# ipicn

./: .gitignore  README.md  pyproject.toml
ipicn/: __init__.py  constants.py  updater.py
